--- a/app/src/main/res/layout/activity_worte_main.xml
+++ b/app/src/main/res/layout/activity_worte_main.xml
@@ -4,49 +4,86 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bgGrey"
     tools:context="com.app.worte.worte.WorteMain">
 
     <LinearLayout
         android:layout_width="368dp"
         android:layout_height="495dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="12dp"
-        tools:layout_editor_absoluteY="19dp">
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
 
         <Button
-            android:id="@+id/button17"
+            android:id="@+id/askButton"
             android:layout_width="match_parent"
             android:layout_height="70dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
             android:layout_weight="0.26"
-            android:text="Button" />
+            android:background="@drawable/round_shape_btn"
+            android:fontFamily="sans-serif"
+            android:text="Some word"
+            android:textSize="18sp"
+            android:typeface="normal" />
 
         <Button
-            android:id="@+id/button16"
+            android:id="@+id/answ1"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="60dp"
-            android:text="Button" />
+            android:background="@drawable/round_answer_btn"
+            android:fontFamily="sans-serif"
+            android:text="Answer one"
+            android:textAlignment="viewStart"
+            android:textSize="18sp"
+            android:typeface="normal" />
 
         <Button
-            android:id="@+id/button15"
+            android:id="@+id/answ2"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
-            android:text="Button" />
+            android:background="@drawable/round_answer_btn"
+            android:fontFamily="sans-serif"
+            android:text="Answer two"
+            android:textAlignment="viewStart"
+            android:textSize="18sp"
+            android:typeface="normal" />
 
         <Button
-            android:id="@+id/button14"
+            android:id="@+id/answ3"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="15dp"
-            android:text="Button" />
+            android:background="@drawable/round_answer_btn"
+            android:elevation="1dp"
+            android:fontFamily="sans-serif"
+            android:text="Answer three"
+            android:textAlignment="viewStart"
+            android:textSize="18sp"
+            android:typeface="normal" />
 
         <Button
-            android:id="@+id/button13"
+            android:id="@+id/answ4"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginBottom="50dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
-            android:text="Button" />
+            android:background="@drawable/round_answer_btn"
+            android:fontFamily="sans-serif"
+            android:text="Answer four"
+            android:textAlignment="viewStart"
+            android:textSize="18sp"
+            android:typeface="normal" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
