--- a/app/src/main/res/drawable/round_answer_btn.xml
+++ b/app/src/main/res/drawable/round_answer_btn.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" android:padding="10dp">
-    <solid android:color="#4796cb"/> <!-- this one is ths color of the Rounded Button -->
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle"
+    android:padding="10dp">
+    <solid android:color="#F2F0B8"/>
     <corners
         android:bottomRightRadius="10dp"
         android:bottomLeftRadius="10dp"
