--- a/app/src/main/res/layout/activity_worte_main.xml
+++ b/app/src/main/res/layout/activity_worte_main.xml
@@ -37,6 +37,7 @@
             android:layout_marginTop="60dp"
             android:background="@drawable/round_answer_btn"
             android:fontFamily="sans-serif"
+            android:paddingLeft="10dp"
             android:text="Answer one"
             android:textAlignment="viewStart"
             android:textSize="18sp"
@@ -51,6 +52,7 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/round_answer_btn"
             android:fontFamily="sans-serif"
+            android:paddingLeft="10dp"
             android:text="Answer two"
             android:textAlignment="viewStart"
             android:textSize="18sp"
@@ -66,6 +68,7 @@
             android:background="@drawable/round_answer_btn"
             android:elevation="1dp"
             android:fontFamily="sans-serif"
+            android:paddingLeft="10dp"
             android:text="Answer three"
             android:textAlignment="viewStart"
             android:textSize="18sp"
@@ -81,6 +84,7 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/round_answer_btn"
             android:fontFamily="sans-serif"
+            android:paddingLeft="10dp"
             android:text="Answer four"
             android:textAlignment="viewStart"
             android:textSize="18sp"
