Basic functionality with default DB

--- a/app/src/main/res/layout/activity_worte_main.xml
+++ b/app/src/main/res/layout/activity_worte_main.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgGrey"
@@ -22,72 +23,85 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
             android:layout_weight="0.26"
-            android:background="@drawable/round_shape_btn"
+            android:background="@drawable/ask_btn_def"
             android:fontFamily="sans-serif"
             android:text="Some word"
-            android:textSize="18sp"
+            android:textAllCaps="false"
+            android:textSize="24sp"
             android:typeface="normal" />
 
         <Button
             android:id="@+id/answ1"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="60dp"
-            android:background="@drawable/round_answer_btn"
+            android:background="@drawable/answ_btn_def"
             android:fontFamily="sans-serif"
+            android:maxHeight="80dp"
+            android:minHeight="50dp"
             android:paddingLeft="10dp"
             android:text="Answer one"
             android:textAlignment="viewStart"
-            android:textSize="18sp"
+            android:textAllCaps="false"
+            android:textSize="24sp"
             android:typeface="normal" />
 
         <Button
             android:id="@+id/answ2"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/round_answer_btn"
+            android:background="@drawable/answ_btn_def"
             android:fontFamily="sans-serif"
+            android:maxHeight="80dp"
+            android:minHeight="50dp"
             android:paddingLeft="10dp"
             android:text="Answer two"
             android:textAlignment="viewStart"
-            android:textSize="18sp"
+            android:textAllCaps="false"
+            android:textSize="24sp"
             android:typeface="normal" />
 
         <Button
             android:id="@+id/answ3"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/round_answer_btn"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/answ_btn_def"
             android:elevation="1dp"
             android:fontFamily="sans-serif"
+            android:maxHeight="80dp"
+            android:minHeight="50dp"
             android:paddingLeft="10dp"
             android:text="Answer three"
             android:textAlignment="viewStart"
-            android:textSize="18sp"
+            android:textAllCaps="false"
+            android:textSize="24sp"
             android:typeface="normal" />
 
         <Button
             android:id="@+id/answ4"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/round_answer_btn"
+            android:background="@drawable/answ_btn_def"
             android:fontFamily="sans-serif"
+            android:maxHeight="80dp"
+            android:minHeight="50dp"
             android:paddingLeft="10dp"
             android:text="Answer four"
             android:textAlignment="viewStart"
-            android:textSize="18sp"
+            android:textAllCaps="false"
+            android:textSize="24sp"
             android:typeface="normal" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
