Added Forward/Backward features

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,11 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:myapp="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/menu_chosedb"
-        android:title="Choose Data Bases" />
+    <item android:id="@+id/menu_prev"
+        android:title="&lt;--  Back" />
 
-    <item android:id="@+id/menu_settings"
-        android:title="Settings" />
+    <item android:id="@+id/menu_next"
+        android:title="--&gt;  Forward" />
+
+    <item android:id="@+id/menu_choosedb"
+        android:title="Choose Databases" />
 
     <item android:id="@+id/menu_quit"
         android:title="Quit" />
