--- a/app/src/main/res/layout/activity_db_list.xml
+++ b/app/src/main/res/layout/activity_db_list.xml
@@ -7,4 +7,11 @@
     android:layout_height="match_parent"
     tools:context="com.app.worte.worte.DbListActivity">
 
+    <ListView
+        android:id="@+id/llChb"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp" />
+
 </android.support.constraint.ConstraintLayout>
