--- a/app/src/main/res/layout/activity_exercise_multiple_select.xml
+++ b/app/src/main/res/layout/activity_exercise_multiple_select.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgGrey"
-    tools:context="com.app.worte.worte.WorteMain">
+    tools:context="com.app.worte.worte.MultipleSelectActivity">
 
     <LinearLayout
         android:layout_width="368dp"
