--- a/app/src/main/res/drawable/answ_btn_def.xml
+++ b/app/src/main/res/drawable/answ_btn_def.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     android:padding="10dp">
-    <solid android:color="#F2F0B8"/>
+    <solid android:color="#B5E9FF"/>
     <corners
         android:bottomRightRadius="10dp"
         android:bottomLeftRadius="10dp"
