--- a/app/src/main/res/layout/activity_worte_main.xml
+++ b/app/src/main/res/layout/activity_worte_main.xml
@@ -5,12 +5,12 @@
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bgGrey"
+    android:background="#3C738A"
     tools:context="com.app.worte.worte.WorteMain">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
@@ -20,8 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp"
             android:layout_weight="0.26"
             android:background="@drawable/ask_btn_def"
             android:fontFamily="sans-serif"
@@ -30,13 +30,29 @@
             android:textSize="24sp"
             android:typeface="normal" />
 
+        <ProgressBar
+            android:id="@+id/progress"
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxHeight="30dp"
+            android:minHeight="30dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="10dp"
+            android:clickable="false"
+            android:indeterminate="false"
+            android:longClickable="false"
+            android:progress="70"
+            android:visibility="visible" />
+
         <Button
             android:id="@+id/answ1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
+            android:layout_marginTop="30dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="60dp"
             android:background="@drawable/answ_btn_def"
             android:fontFamily="sans-serif"
             android:maxHeight="80dp"
@@ -53,8 +69,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/answ_btn_def"
             android:fontFamily="sans-serif"
             android:maxHeight="80dp"
@@ -71,8 +87,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/answ_btn_def"
             android:elevation="1dp"
             android:fontFamily="sans-serif"
@@ -89,10 +105,10 @@
             android:id="@+id/answ4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="50dp"
             android:background="@drawable/answ_btn_def"
             android:fontFamily="sans-serif"
             android:maxHeight="80dp"
